apps/production/ntfy/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: ntfy
spec:
  template:
    spec:
      containers:
        - name: ntfy
