apps/production/ntfy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  namespace: ntfy
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: ntfy.ronaldlokers.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ntfy
                port:
                  name: http
  tls:
    - hosts:
        - ntfy.ronaldlokers.nl
